--- a/javacc-examples/javacc-example-simple/README
+++ b/javacc-examples/javacc-example-simple/README
@@ -1,9 +1,9 @@
 /* Copyright (c) 2006, Sun Microsystems, Inc.
  * All rights reserved.
- * 
+ *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
- * 
+ *
  *     * Redistributions of source code must retain the above copyright notice,
  *       this list of conditions and the following disclaimer.
  *     * Redistributions in binary form must reproduce the above copyright
@@ -12,7 +12,7 @@
  *     * Neither the name of the Sun Microsystems, Inc. nor the names of its
  *       contributors may be used to endorse or promote products derived from
  *       this software without specific prior written permission.
- * 
+ *
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -91,7 +91,7 @@ Here are some sample runs:
 	{x<return>
 	Lexical error at line 1, column 2.  Encountered: "x"
 	TokenMgrError: Lexical error at line 1, column 2.  Encountered: "x" (120), after : ""
-	        at Simple1TokenManager.getNextToken(Simple1TokenManager.java:146)
+	        at Simple1Scanner.getNextToken(Simple1Scanner.java:146)
 	        at Simple1.getToken(Simple1.java:140)
 	        at Simple1.MatchedBraces(Simple1.java:51)
 	        at Simple1.Input(Simple1.java:10)
@@ -102,7 +102,7 @@ Here are some sample runs:
 	{}}<return>
 	ParseException: Encountered "}" at line 1, column 3.
 	Was expecting one of:
-	    <EOF> 
+	    <EOF>
 	    "\n" ...
 	    "\r" ...
 
